smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/invalid-object-shape-id-key.smithy
// Parse error at line 3, column 6 near `.b`: Expected: ':', but found '.'
metadata foo = {
  foo.bar#baz: "hello"
}
